5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1831_1643.log
== TEST (2019-06-13 16:05:04) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a=0

for i in range(size(v))
	if(v[i]>=5)
		a+=1
print(a)
-- ERROR:
File "XXXX", line 6
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:10) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a=0

for i in range(size(v))
	if(v[i]>=5)
		a+=1
print(a)
-- ERROR:
File "XXXX", line 6
    for i in range(size(v))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:05:15) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a=0

for i in range(size(v)):
	if(v[i]>=5):
		a+=1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:09:22) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0

a2=0

for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
for i in range(size(v)):
	a2=zeros(a1, dtype=int)

print(a1)
print(a2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:45) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0

for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
for i in range(size(v)):
	a2=zeros(a1, dtype=int)
	a2[i]=a1[i]

print(a1)
print(a2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:21) 
-- CODE:
from numpy import*

v= array(int(input("Insira o seu vetor: ")))
a1=0
a2=0

for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
for i in range(size(v)):
	a2=zeros(a1, dtype=int)
	a2[i]=a1[i]

print(a1)
print(a2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:06) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
a3=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
for i in range(size(v)):
	a2=zeros(a1, dtype=int)
	a2[i]=a1[i]

print(a1)
print(a2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:18) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

for i in range(size(v)):
	if(v[i]>=5):
		cont[i]=a1[i]

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:32) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

for i in range(size(v)):
	if(v[i]>=5):
		cont[i]=a1[i]

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:07) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

for i in range(size(v)):
	if(v[i]>=5):
		

print(a1)
print(cont)
-- ERROR:
File "XXXX", line 16
    print(a1)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:31) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)



print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:14) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

for i in range(size(v)):
	if(v>=5):
		cont[0]=i


print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:32) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
a2=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

for i in range(size(v)):
	if(v[i]>=5):
		cont[0]=i


print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:39) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
c1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)
i=-1
j=0
for i in range(size(v)):
	if(v[i]>=5):
		cont[i]=j
		j= j+ 1
		i= i + 1
	

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:43) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)
i=-1
j=0
for i in range(size(v)):
	if(v[i]>=5):
		cont[i]= i
		j= j + 1
		i= i + 1
	

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:57) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)
i=-1
j=0
for i in range(size(v)):
	if(v[i]>=5):
		cont[i]= j
		j= j + 1
		i= i + 1
	

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:18) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)
i=-1
j=1
for i in range(size(v)):
	if(v[i]>=5):
		cont[i]= j
		j= j + 1
		i= i + 1
	

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:41) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

j= 0
for i in range(size(v)):
	if(v[i]>=5):
		cont[j]= i
		j= j + 1
		
	

print(a1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:44:48) 
-- CODE:
from numpy import*

v= array(eval(input("Insira o seu vetor: ")))
a1=0
cont=0
for i in range(size(v)):
	if(v[i]>=5):
		a1+=1
cont= zeros(a1, dtype=int)

j= 0
for i in range(size(v)):
	if(v[i]>=5):
		cont[j]= i
		j= j + 1
		
	

print(a1)
print(cont)
-- EXECUTION TIME:
0.764173
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
